prototype list matieres

--- a/app/src/main/res/layout/activity_matiere_form.xml
+++ b/app/src/main/res/layout/activity_matiere_form.xml
@@ -5,13 +5,13 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".activities.matieres.MatiereFormActivity">
 
-    <Button
-        android:id="@+id/test_btn"
+    <TextView
+        android:id="@+id/matiere_form_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="@string/matiere_form_txt"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
