--- a/app/src/main/res/layout/classe_list_item.xml
+++ b/app/src/main/res/layout/classe_list_item.xml
@@ -4,16 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/classe_list_item_rl"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp">
 
     <TextView
         android:id="@+id/mli_intitule_tv"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/intitule_txt"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textAlignment="viewStart"
+        android:layout_alignParentStart="true"
+        android:layout_marginEnd="8dp"
+        android:padding="16dp" />
+
+    <TextView
+        android:id="@+id/mli_promotion_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/promotion_txt"
+        android:textAlignment="viewEnd"
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@id/mli_intitule_tv"
+        android:padding="16dp" />
 </RelativeLayout>
