[LAYOUT] add "eleves" list structure

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="cnam">#FFF44336</color>
+    <color name="cnam_light">#FFA0A0</color>
 </resources>
