--- a/app/src/main/res/layout/classe_list_item.xml
+++ b/app/src/main/res/layout/classe_list_item.xml
@@ -5,26 +5,33 @@
     android:id="@+id/classe_list_item_rl"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingStart="16dp"
-    android:paddingEnd="16dp">
+    android:paddingStart="@dimen/padding_def"
+    android:paddingEnd="@dimen/padding_def">
 
     <TextView
         android:id="@+id/mli_intitule_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_marginEnd="0dp"
+        android:paddingTop="@dimen/padding_def"
+        android:paddingBottom="@dimen/padding_def"
         android:text="@string/intitule_txt"
         android:textAlignment="viewStart"
-        android:layout_alignParentStart="true"
-        android:layout_marginEnd="8dp"
-        android:padding="16dp" />
+        android:textSize="@dimen/textsize_def"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/mli_promotion_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="0dp"
+        android:layout_toEndOf="@id/mli_intitule_tv"
+        android:paddingLeft="@dimen/padding_def"
+        android:paddingTop="@dimen/padding_def"
+        android:paddingBottom="@dimen/padding_def"
         android:text="@string/promotion_txt"
         android:textAlignment="viewEnd"
-        android:layout_alignParentEnd="true"
-        android:layout_toEndOf="@id/mli_intitule_tv"
-        android:padding="16dp" />
+        android:textSize="@dimen/textsize_def" />
 </RelativeLayout>
