Fix: encore layout

--- a/app/src/main/res/layout/activity_matiere_detail.xml
+++ b/app/src/main/res/layout/activity_matiere_detail.xml
@@ -17,10 +17,10 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/professeur_et"
-        app:layout_constraintHorizontal_bias="0.538"
+        app:layout_constraintHorizontal_bias="0.511"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.506" />
+        app:layout_constraintTop_toBottomOf="@+id/description_tv"
+        app:layout_constraintVertical_bias="0.194" />
 
     <TextView
         android:id="@+id/intitule_tv"
@@ -41,14 +41,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/textview_margin_form"
-        android:layout_marginTop="252dp"
+        android:layout_marginTop="72dp"
         android:layout_marginRight="@dimen/textview_margin_form"
         android:text="Description :"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/description_et"
-        app:layout_constraintHorizontal_bias="0.434"
+        app:layout_constraintHorizontal_bias="0.56"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/intitule_tv" />
 
     <EditText
         android:id="@+id/intitule_et"
@@ -91,15 +91,16 @@
         android:id="@+id/update_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="456dp"
         android:width="@dimen/buttonsize_form"
         android:backgroundTint="@color/cnam"
         android:text="Mettre à jour"
         android:textColor="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.082"
+        app:layout_constraintHorizontal_bias="0.096"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.7" />
 
     <Button
         android:id="@+id/delete_btn"
@@ -120,15 +121,16 @@
         android:id="@+id/return_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/textview_margintop_form"
         android:width="@dimen/buttonsize_form"
         android:backgroundTint="@color/cnam"
         android:text="Retour"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/delete_btn" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.846" />
 
     <TextView
         android:id="@+id/matiere_form_detail"
