--- a/app/src/main/res/layout/activity_matiere_form.xml
+++ b/app/src/main/res/layout/activity_matiere_form.xml
@@ -106,14 +106,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/textview_margin_form"
-        android:layout_marginTop="240dp"
+        android:layout_marginTop="64dp"
         android:layout_marginRight="@dimen/textview_margin_form"
         android:text="Description :"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/description_et"
-        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintHorizontal_bias="0.477"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/intitule_tv" />
 
     <TextView
         android:id="@+id/professeur_tv"
