--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,5 +5,8 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.AnnuaireCnam" parent="Base.Theme.AnnuaireCnam" />
+    <style name="Theme.AnnuaireCnam" parent="Base.Theme.AnnuaireCnam">
+        <item name="android:statusBarColor">@color/cnam</item>
+        <item name="android:actionBarStyle">@color/cnam</item>
+    </style>
 </resources>
