--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.AnnuaireCnam" parent="Base.Theme.AnnuaireCnam">
-     <item name="android:statusBarColor">@color/cnam</item>
+    <style name="Base.Theme.AnnuaireCnam" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Customize your light theme here. -->
+        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-   
+    <style name="Theme.AnnuaireCnam" parent="Base.Theme.AnnuaireCnam">
+        <item name="android:statusBarColor">@color/cnam</item>
+        <item name="android:actionBarStyle">@color/cnam</item>
+    </style>
 </resources>
