--- a/app/src/main/res/layout/activity_matiere_detail.xml
+++ b/app/src/main/res/layout/activity_matiere_detail.xml
@@ -7,78 +7,140 @@
     android:orientation="vertical"
     android:padding="16dp">
 
+    <TextView
+        android:id="@+id/professeur_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/textview_margin_form"
+        android:layout_marginTop="68dp"
+        android:layout_marginRight="@dimen/textview_margin_form"
+        android:text="Professeur :"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@+id/professeur_et"
+        app:layout_constraintHorizontal_bias="0.558"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/description_tv" />
+
+    <TextView
+        android:id="@+id/intitule_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/textview_margin_form"
+        android:layout_marginTop="96dp"
+        android:layout_marginRight="@dimen/textview_margin_form"
+        android:text="Intitulé :"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@+id/intitule_et"
+        app:layout_constraintHorizontal_bias="0.181"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/matiere_form_detail" />
+
+    <TextView
+        android:id="@+id/description_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/textview_margin_form"
+        android:layout_marginTop="68dp"
+        android:layout_marginRight="@dimen/textview_margin_form"
+        android:text="Description :"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@+id/description_et"
+        app:layout_constraintHorizontal_bias="0.536"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/intitule_tv" />
+
     <EditText
         android:id="@+id/intitule_et"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="132dp"
+        android:layout_marginTop="84dp"
+        android:width="@dimen/edittextsize_form"
         android:hint="Intitulé"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.74"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/matiere_form_detail" />
 
     <EditText
         android:id="@+id/description_et"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="48dp"
+        android:width="@dimen/edittextsize_form"
         android:hint="Description"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.74"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/intitule_et" />
 
     <EditText
         android:id="@+id/professeur_et"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginRight="@dimen/textview_margin_form"
+        android:width="@dimen/edittextsize_form"
         android:hint="Professeur"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.783"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/description_et" />
 
     <Button
         android:id="@+id/update_btn"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:background="@color/cnam"
+        android:layout_marginStart="8dp"
+        android:width="@dimen/buttonsize_form"
+        android:backgroundTint="@color/cnam"
         android:text="Mettre à jour"
         android:textColor="@android:color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/delete_btn"
+        app:layout_constraintHorizontal_bias="0.348"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/professeur_et" />
+        app:layout_constraintTop_toBottomOf="@+id/professeur_et"
+        app:layout_constraintVertical_bias="0.355" />
 
     <Button
         android:id="@+id/delete_btn"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:background="@color/cnam"
+        android:layout_marginEnd="28dp"
+        android:width="@dimen/buttonsize_form"
+        android:backgroundTint="@color/cnam"
         android:text="Supprimer"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/update_btn"
-        app:layout_constraintVertical_bias="0.115" />
+        app:layout_constraintTop_toBottomOf="@+id/professeur_et"
+        app:layout_constraintVertical_bias="0.355" />
 
     <Button
         android:id="@+id/return_btn"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:background="@color/cnam"
+        android:layout_marginBottom="92dp"
+        android:width="@dimen/buttonsize_form"
+        android:backgroundTint="@color/cnam"
         android:text="Retour"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/matiere_form_detail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10sp"
+        android:text="@string/matiere_detail_txt"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/delete_btn" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.054" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
