--- a/app/src/main/res/layout/activity_matiere_form.xml
+++ b/app/src/main/res/layout/activity_matiere_form.xml
@@ -11,7 +11,9 @@
         android:id="@+id/matiere_form_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10sp"
         android:text="@string/matiere_form_txt"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -21,61 +23,109 @@
 
     <EditText
         android:id="@+id/intitule_et"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="68dp"
+        android:width="@dimen/edittextsize_form"
         android:hint="Intitulé"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.751"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/matiere_form_tv" />
 
     <EditText
         android:id="@+id/description_et"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="@dimen/textview_margintop_form"
+        android:width="@dimen/edittextsize_form"
         android:hint="Description"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.751"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/intitule_et" />
 
     <EditText
         android:id="@+id/professeur_et"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="@dimen/textview_margintop_form"
+        android:width="@dimen/edittextsize_form"
         android:hint="Professeur"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.751"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/description_et" />
 
     <Button
         android:id="@+id/create_btn"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="152dp"
-        android:background="@color/cnam"
+        android:layout_marginTop="129dp"
+        android:width="@dimen/buttonsize_form"
+        android:backgroundTint="@color/cnam"
         android:text="Création"
         android:textColor="@android:color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintEnd_toStartOf="@+id/return_btn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/professeur_et" />
 
     <Button
         android:id="@+id/return_btn"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:background="@color/cnam"
+        android:layout_marginTop="128dp"
+        android:layout_marginEnd="44dp"
+        android:width="@dimen/buttonsize_form"
+        android:backgroundTint="@color/cnam"
         android:text="Retour"
         android:textColor="@android:color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/professeur_et" />
+
+    <TextView
+        android:id="@+id/intitule_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/textview_margin_form"
+        android:layout_marginTop="81dp"
+        android:layout_marginRight="@dimen/textview_margin_form"
+        android:text="Intitulé :"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@+id/intitule_et"
+        app:layout_constraintHorizontal_bias="0.281"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/create_btn" />
+        app:layout_constraintTop_toBottomOf="@+id/matiere_form_tv" />
+
+    <TextView
+        android:id="@+id/description_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/textview_margin_form"
+        android:layout_marginTop="64dp"
+        android:layout_marginRight="@dimen/textview_margin_form"
+        android:text="Description :"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@+id/description_et"
+        app:layout_constraintHorizontal_bias="0.477"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/intitule_tv" />
+
+    <TextView
+        android:id="@+id/professeur_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/textview_margin_form"
+        android:layout_marginTop="67dp"
+        android:layout_marginRight="@dimen/textview_margin_form"
+        android:layout_marginBottom="376dp"
+        android:text="Professeur :"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/professeur_et"
+        app:layout_constraintHorizontal_bias="0.485"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/description_tv"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
